--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-	<script type="text/javascript" src="js/zepto.js"></script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<script type="text/javascript" src="js/grades.js"></script>
+	<script type="text/javascript" src="js/zepto.js"></script>
 	<script type="text/javascript" src="js/hipsterfy.js"></script>
 
 	<link type="text/css" href="css/style.css" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
 			<tr>
 				<td>Mathe</td>
 				<td>
-				<select id="german" onchange="checkVal(0, cir)">
+				<select class="custom" onchange="checkVal(0, cir)">
 					<option value="0" selected="selected"></option>
 					<option value="1">1  *** wow!! ***</option>
 					<option value="2">2  *** super! ***</option>
@@ -46,7 +46,7 @@
 			<tr>
 				<td>Deutsch</td>
 				<td>
-				<select id="math" onchange="checkVal(1, cir)">
+				<select class="custom" onchange="checkVal(1, cir)">
 					<option value="0" selected="selected"></option>
 					<option value="1">1  *** wow!! ***</option>
 					<option value="2">2  *** super! ***</option>
@@ -58,7 +58,7 @@
 			<tr>
 				<td>Englisch</td>
 				<td>
-			<select id="sport" onchange="checkVal(2, cir)">
+			<select class="custom" onchange="checkVal(2, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -71,7 +71,7 @@
 			<tr>
 				<td>Sport</td>
 				<td>
-			<select id="sport2" onchange="checkVal(3, cir)">
+			<select class="custom" onchange="checkVal(3, cir)">
 				<option value="0" selected="selected"></option>
  				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -84,7 +84,7 @@
 			<tr>
 				<td>Wahlpflichtfach</td>
 				<td>
-			<select id="sport2" onchange="checkVal(4, cir)">
+			<select class="custom" onchange="checkVal(4, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -97,7 +97,7 @@
 			<tr>
 				<td>Ethik</td>
 				<td>
-			<select id="sport2" onchange="checkVal(5, cir)">
+			<select class="custom" onchange="checkVal(5, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -110,7 +110,7 @@
 			<tr>
 				<td>Erdkunde</td>
 				<td>
-			<select id="sport2" onchange="checkVal(6, cir)">
+			<select class="custom" onchange="checkVal(6, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -123,7 +123,7 @@
 			<tr>
 				<td>Geschichte</td>
 				<td>
-			<select id="sport2" onchange="checkVal(7, cir)">
+			<select class="custom" onchange="checkVal(7, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -136,7 +136,7 @@
 			<tr>
 				<td>Physik</td>
 				<td>
-			<select id="sport2" onchange="checkVal(8, cir)">
+			<select class="custom" onchange="checkVal(8, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -149,7 +149,7 @@
 			<tr>
 				<td>Chemie</td>
 				<td>
-			<select id="sport2" onchange="checkVal(9, cir)">
+			<select class="custom" onchange="checkVal(9, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -162,7 +162,7 @@
 			<tr>
 				<td>WAT</td>
 				<td>
-			<select id="sport2" onchange="checkVal(10, cir)">
+			<select class="custom" onchange="checkVal(10, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -175,7 +175,7 @@
 			<tr>
 				<td>Biologie</td>
 				<td>
-			<select id="sport2" onchange="checkVal(11, cir)">
+			<select class="custom" onchange="checkVal(11, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -188,7 +188,7 @@
 			<tr>
 				<td>Musik</td>
 				<td>
-			<select id="sport2" onchange="checkVal(11, cir)">
+			<select class="custom" onchange="checkVal(12, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -323,7 +323,7 @@
 			<tr>
 				<td>Lebenskunde</td>
 				<td>
-			<select id="sport2" onchange="checkVal(6, cam)">
+			<select id="sport2" onchange="checkVal(7, cam)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -336,7 +336,7 @@
 			<tr>
 				<td>Geschichte</td>
 				<td>
-			<select id="sport2" onchange="checkVal(7, cam)">
+			<select id="sport2" onchange="checkVal(8, cam)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -388,18 +388,25 @@
 				 	total.grades[index] = camilloSelects[index].value;
 			 	}
 		 		total.getAverage();
-		 		console.log(total.grades.toString());
-		        
 		        var avg = total.printAverage();
 		        var id = "#".concat(total.print());
-		         $(id + '-cash').animate({
-			        scale: '1.2'
-		        }, 200, 'ease-out', function(){$(this).anim({ scale: '1.0'}, 0.2)});
-
 		        $(id + '-average').html("<span class='avg'>&oslash;</span>" + avg);	
-		    
+
 		        var cash = total.cashIn().toString();
 		        $(id + '-cash').html("<span class='currency'>&euro;</span>" + cash);
+		        var isFirefox = navigator.userAgent.toLowerCase().indexOf('firefox') > -1;
+
+		        if (!isFirefox) {
+			        $(id + '-cash').animate({
+				        scale: '1.2'
+			        }, 200, 'ease', function(){  $(this).anim({ scale: '1.0' }, 0.2) });
+		        }
+/*
+
+		        $(id + '-pic').animate({
+			        translateY: '-10px'
+		        }, 300, 'linear', function(){ $(this).anim({ translateY: '0' }, 0.3) });
+*/
 		     }
 		 </script>
 	</div>
