--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<tr>
 				<td>Mathe</td>
 				<td>
-				<select class="custom" onchange="checkVal(0, cir)">
+				<select onchange="checkVal(0, cir)">
 					<option value="0" selected="selected"></option>
 					<option value="1">1  *** wow!! ***</option>
 					<option value="2">2  *** super! ***</option>
@@ -46,7 +46,7 @@
 			<tr>
 				<td>Deutsch</td>
 				<td>
-				<select class="custom" onchange="checkVal(1, cir)">
+				<select onchange="checkVal(1, cir)">
 					<option value="0" selected="selected"></option>
 					<option value="1">1  *** wow!! ***</option>
 					<option value="2">2  *** super! ***</option>
@@ -58,7 +58,7 @@
 			<tr>
 				<td>Englisch</td>
 				<td>
-			<select class="custom" onchange="checkVal(2, cir)">
+			<select onchange="checkVal(2, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -71,7 +71,7 @@
 			<tr>
 				<td>Sport</td>
 				<td>
-			<select class="custom" onchange="checkVal(3, cir)">
+			<select onchange="checkVal(3, cir)">
 				<option value="0" selected="selected"></option>
  				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -84,7 +84,7 @@
 			<tr>
 				<td>Wahlpflichtfach</td>
 				<td>
-			<select class="custom" onchange="checkVal(4, cir)">
+			<select onchange="checkVal(4, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -97,7 +97,7 @@
 			<tr>
 				<td>Ethik</td>
 				<td>
-			<select class="custom" onchange="checkVal(5, cir)">
+			<select onchange="checkVal(5, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -110,7 +110,7 @@
 			<tr>
 				<td>Erdkunde</td>
 				<td>
-			<select class="custom" onchange="checkVal(6, cir)">
+			<select onchange="checkVal(6, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -123,7 +123,7 @@
 			<tr>
 				<td>Geschichte</td>
 				<td>
-			<select class="custom" onchange="checkVal(7, cir)">
+			<select onchange="checkVal(7, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -136,7 +136,7 @@
 			<tr>
 				<td>Physik</td>
 				<td>
-			<select class="custom" onchange="checkVal(8, cir)">
+			<select onchange="checkVal(8, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -149,7 +149,7 @@
 			<tr>
 				<td>Chemie</td>
 				<td>
-			<select class="custom" onchange="checkVal(9, cir)">
+			<select onchange="checkVal(9, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -162,7 +162,7 @@
 			<tr>
 				<td>WAT</td>
 				<td>
-			<select class="custom" onchange="checkVal(10, cir)">
+			<select onchange="checkVal(10, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -175,7 +175,7 @@
 			<tr>
 				<td>Biologie</td>
 				<td>
-			<select class="custom" onchange="checkVal(11, cir)">
+			<select onchange="checkVal(11, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
@@ -188,7 +188,7 @@
 			<tr>
 				<td>Musik</td>
 				<td>
-			<select class="custom" onchange="checkVal(12, cir)">
+			<select onchange="checkVal(12, cir)">
 				<option value="0" selected="selected"></option>
 				<option value="1">1  *** wow!! ***</option>
 				<option value="2">2  *** super! ***</option>
