In worst case do not make them pay by negative rewards :)

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			</tr>
 
 			<tr>
-				<td>Wahlpflichtfach</td>
+				<td>Wahlpflicht</td>
 				<td>
 			<select onchange="checkVal(4, cir)">
 				<option value="0" selected="selected"></option>
@@ -403,25 +403,24 @@
 		</p>
 
 		<p class="footer-text">
-			Du hast <b>50&euro;</b> Startkapital,<br> 
+			Du hast <b>40&euro;</b> Startkapital,<br> 
 			wenn auf deinem Zeugnis<br>
 			weder eine <b>5</b> noch eine <b>6</b> steht<br>
 		</p>
 
   		<p class="footer-text">
-			Mit jeder <b>1</b> auf deinem Zeugnis<br> 
-			<b>erh&ouml;ht</b> sich dein Budget um <b>10&euro;</b><br>
+			Mit jeder <b>1</b> auf deinem Zeugnis <b>erh&ouml;ht</b> sich dein Budget um <b>10&euro;</b><br>
   		</p>
 
 		<p class="footer-text">
-			Mit jeder <b>2</b> auf deinem Zeugnis<br> 
-			<b>erh&ouml;ht</b> sich dein Budget um <b>5&euro;</b><br>
-		</p>
- 
- 		<p class="footer-text">
-			Mit jeder <b>4</b> auf deinem Zeugnis<br> 
-			<b>reduziert</b> sich dein Budget um <b>5&euro;</b>
+			Mit jeder <b>2</b> auf deinem Zeugnis <b>erh&ouml;ht</b> sich dein Budget um <b>5&euro;</b>.<br><br>
+			Jede <b>4</b> <b>reduziert</b> dein Budget um <b>5&euro;</b>
   		</p>
+		
+		<p class="footer-text">
+			Mit jeder <b>3</b> auf deinem Zeugnis <b>erh&ouml;ht</b> sich dein Budget um <b>1&euro;</b><br>
+		</p>
+
   	</div>
 </div>
 </body>
